Table admin{
_id ObjectId [pk] 
subject string
}

Table users {
  _id ObjectId [pk]
  firstname string
  middlename string
  lastname string
  studentNumber string
  studentDomain string
  yearlevel ObjectId [ref: >subject.year]
  semister  ObjectId [ref: >subject.semister]
  subject   ObjectId [ref: >subject.subjectName]
  role string // admin | student
  createdAt datetime
}

Table subject {
  _id ObjectId [pk]
  subjectName  ObjectId [ref: >admin._id]
  units string
  code string
  year string
  semister string
}